hphp/hack/test/typecheck/new_inference/typehole/merge_tvars2.php.like_types.exp
File "merge_tvars2.php", line 15, characters 19-27:
Invalid argument (Typing[4110])
File "merge_tvars2.php", line 18, characters 27-32:
Expected string
File "merge_tvars2.php", line 7, characters 26-28:
But got dynamic because it is an unenforceable type
